tests/behavior/error/null_pointer_arithmetic8.bz
function main()
{
	let i = 0;
	let p1: ?*int32 = null;
	let p2: ?*int32 = &i;
	p1 - p2;
}
